--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
-<p>pierwszy paragraf</p>
-lll
-<p>kolejny tekst</p>
-
-<p>i jeszcze jeden i jeszce raz</p>
-
-<paragrafp>czwarty </paragrafp>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<form action="https://formspree.io/konradkowalczyk89@gmail.com"
+      method="POST">
+		<label for="name">Imię</label>
+		<input type="text" name="name" id="name"><br />
+		<label for="surname">Nazwisko</label>
+		<input type="text" name="surname" id="surname"><br />
+		<label for="email">E-mail</label>
+		<input type="email" name="email" id="email"><br />
+		<label for="tel">Telefon</label>
+		<input type="text" name="telnumb" id="tel"><br />
+		<label for="wiadomosc">Wiadomość</label>
+		<textarea rows="4" cols="50" name="wiadomosc" id="wiadomosc"></textarea>
+		<input type="submit" value="Send">		
+	</form>
+	
+</body>
+</html>
