zmiana literówki przy id

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -16,7 +16,7 @@
 			<label for="name">Imię:</label><br />
 			<input type="text" name="name" id="name" placeholder="Jan"><br />
 			<label for="surname">Nazwisko:</label><br />
-			<input type="text" name="surnamename" id="surnamename" placeholder="Nowak"><br />
+			<input type="text" name="surnamename" id="surname" placeholder="Nowak"><br />
 			<label for="mail">E-mail:</label><br />
 			<input type="email" name="email" id="mail" placeholder="example@akademia108.pl"><br />
 	<!--		jak zrobić żeby wpisywany teks zastępował kreski w polu????/-->
