--- a/index.html
+++ b/index.html
@@ -1,57 +1,106 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
+	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<title>Document</title>
+	<link rel="stylesheet" href="css/responsive.css" type="text/css">
+	<title>Front-end Developar - Konrad Kowalczyk</title>
 </head>
+
 <body>
-	<header>
-		<h1>Formularz zgłoszeniowy</h1>
+	<nav>
+		<ul id="main-nav">
+			<li><a href="#about">O mnie</a></li>
+			<li><a href="#skills">umiejętności</a></li>
+			<li><a href="#portfolio">portfolio</a></li>
+			<li><a href="#footer">kontakt</a></li>
+		</ul>
+	</nav>
+	<header id="main-header">
+		<div class="main-header-content">
+			<h1>Konrad <span class="green">Kowalczyk</span></h1>
+			<h2>Front-end Developer</h2>
+		</div>
 	</header>
-<!--	sprawdzić metodę-->
-	<form action="https://formspree.io/konradkowalczyk89@gmail.com"
-      method="POST"> 
-  	<div class="wrap-input">
-			<label for="name">Imię:</label><br />
-			<input type="text" name="name" id="name" placeholder="Jan"><br />
-			<label for="surname">Nazwisko:</label><br />
-			<input type="text" name="surnamename" id="surname" placeholder="Nowak"><br />
-			<label for="mail">E-mail:</label><br />
-			<input type="email" name="email" id="mail" placeholder="example@akademia108.pl"><br />
-	<!--		jak zrobić żeby wpisywany teks zastępował kreski w polu????/-->
-			<label for="tel">Telefon:</label><br />
-			<input type="text" name="telephopne" placeholder="___-___-___" id="tel"><br />
-    </div>
-    <div class="cities">	
-			<select name="city" id="miasta">
-				<option value="Warszawa">Warszawa</option>
-				<option value="Kraków">Kraków</option>
-				<option value="Wrocław">Wrocław</option>
-			</select><br />
+	<section id="about">
+		<h2>O <span class="green">mnie</span></h2>
+		<figure class="foto">
+			<a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="blank"><img src="images/my-foto.gif" alt="moje foto"></a>
+		</figure>
+			
+		
+		<article>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quos dolorum pariatur aliquid iusto possimus minima eos explicabo impedit ullam nemo commodi deleniti obcaecati sapiente, consequatur voluptatum itaque nesciunt nulla amet quod voluptatem, accusantium veniam eius debitis! Praesentium labore, laudantium odio earum tenetur, nesciunt enim autem rerum aut cupiditate pariatur, temporibus odit, nostrum iure natus quis! Rerum ipsa reiciendis voluptatem cumque at nulla ex libero non exercitationem, eaque distinctio alias ipsum tempore! Aut, obcaecati mollitia tenetur accusantium harum, reprehenderit natus veniam quo molestiae nam laudantium, excepturi quas? Pariatur qui dolorum deserunt, nam corporis nemo voluptates impedit, enim fugit consequatur mollitia quos a placeat sapiente ea dolore soluta alias distinctio cupiditate quaerat repudiandae labore eligendi consectetur? Voluptatibus reiciendis facilis ea delectus modi officiis nesciunt incidunt repellat repudiandae quam ut tempore harum quisquam eaque, similique veniam in, blanditiis. Necessitatibus excepturi aut iste incidunt, asperiores corporis aspernatur nulla eaque labore vel? Iste, dolorum?</p>
+		</article>		
+	</section>
+	<section id="skills">
+		<h2>
+			Moje <span class="green">umiejętności</span>
+		</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptates porro nostrum ut sed eius!<br />Placeat reiciendis ut voluptas tenetur ipsa dolorem, libero, facilis doloribus soluta voluptatum!<br />Ducimus quia suscipit illo sint officiis incidunt blanditiis, nihil assumenda modi debitis esse totam perspiciatis, libero exercitationem aliquid!<br />Ipsam accusantium, dolorem voluptatibus eius?</p>
+		
+		<div id="icons">
+			<figure>
+				<img src="images/icons/html5.png" alt="html5">
+				<figcaption>html5</figcaption>
+			</figure>
+			<figure>
+				<img src="images/icons/css-3.png" alt="css3">
+				<figcaption>css3</figcaption>
+			</figure>
+			<figure>
+				<img src="images/icons/js.png" alt="js">
+				<figcaption>JavaScript</figcaption>
+			</figure>
+			<figure>
+				<img src="images/icons/jquery-sketch-symbol.png" alt="jquery">
+				<figcaption>jQuery</figcaption>
+			</figure>
 		</div>
-		<div class="man-woman">
-			<label for="man">Mężczyzna</label>
-			<img src="images/masculine.png" alt="man">
-			<input type="radio" name="gender" value="mężczyzna" id="man" checked="checked">
-			<label for="woman">Kobieta</label>
-			<img src="images/femenine.png" alt="woman">
-			<input type="radio" name="gender" value="kobieta" id="woman">
+	</section>
+	<section id="portfolio">
+		<h2>Moje <span class="green">portfolio</span></h2>
+		<div id="gallery">
+			<div class="item-1">
+				<div id="item-content-1">
+					<h1>Formularz zgłoszeniowy</h1>
+					<p>projekt formularza przesyłającego dane klienta</p>
+					<i><img src="images/icons/link-symbol.png" alt="linked"></i>
+				</div>
+			</div>
+			<div class="item-2">
+				<div class="item-content"></div>
+			</div>
+			<div class="item-3">
+				<div class="item-content"></div>
+			</div>
 		</div>
-		<div class="clause">
-			<p>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu<br /> (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922). </p><br />
+	</section>
+	<section id="footer">
+		<div id="contact">
+			<h2>Konrad <span class="green">Kowalczyk</span></h2>
+			<address> Aleja Komisji Edukacji Narodowej 36A/29<br />02-797 Warszawa</address>
+			<p>+48/512-442-052</p><br />
+			<p><a href="mailto:konradkowalczyk89@gmail.com?Subject=Cooperation" target="_top">konradkowalczyk@gmail.com</a></p>
+			<div id="media">			
+					<i><a href="https://www.facebook.com/konrad.kowalczyk.927" target="_blank"><img src="images/icons/facebook-sketched-logo-variant.png" alt="fb.com"></a></i>
+					<i><a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="_blank"><img src="images/icons/linkedin.png" alt="linkedin"></a></i>
+					<i><a href="#"><img src="images/icons/google-plus.png" alt="google"></a></i>
+					<i><a href="#"><img src="images/icons/twitter.png" alt="twitter"></a></i>		
+			</div>	
+		</div>
+		<div id="form">
+			<form action="https://formspree.io/konradkowalczyk89@gmail.com" method="post">
+				<input type="text" name="name-surname" placeholder="Imię i Nazwisko"><br />
+				<input type="email" name="email" placeholder="example@example.com"><br />
+				<textarea name="textarea" id="wiadomosc" cols="60" rows="10" placeholder="Twoja wiadomość"></textarea><br />
+				<input type="submit" name="Wyślij">
+			</form>
+		</div>
+	</section>
 
-			<input type="checkbox" name="acceptance" id="check">
-			<label for="check">Akceptuję</label><br />
-		</div>
-		<div class="message">	
-			<label for="area">Napisz do nas</label><br />
-			<textarea name="wiadomość" id="area" cols="80" rows="10" placeholder="Twoja wiadomość"></textarea><br />
-
-			<input type="submit" value="Wyślij" id="wyslij">
-		</div>
-	</form>
-
-	
 </body>
+
 </html>
