--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 					<i><a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="_blank"><img src="images/icons/linkedin.png" alt="linkedin"></a></i>
 					<i><a href="#"><img src="images/icons/google-plus.png" alt="google"></a></i>
 					<i><a href="#"><img src="images/icons/twitter.png" alt="twitter"></a></i>		
-			</div>	
+			</div>
+			<p>&copy; copyright Konrad Kowalczyk</p>	
 		</div>
 		<div id="form">
 			<form action="https://formspree.io/konradkowalczyk89@gmail.com" method="post">
@@ -99,6 +100,7 @@
 				<input type="submit" name="Wyślij">
 			</form>
 		</div>
+		
 	</section>
 
 </body>
