--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 	<nav>
+		<label class="toggle" for="drop">MENU</label>
+		<input id="drop" type="checkbox">
 		<ul id="main-nav">
 			<li><a href="#about">O mnie</a></li>
 			<li><a href="#skills">umiejętności</a></li>
@@ -90,7 +92,6 @@
 					<i><a href="#"><img src="images/icons/google-plus.png" alt="google"></a></i>
 					<i><a href="#"><img src="images/icons/twitter.png" alt="twitter"></a></i>		
 			</div>
-			<p>&copy; copyright Konrad Kowalczyk</p>	
 		</div>
 		<div id="form">
 			<form action="https://formspree.io/konradkowalczyk89@gmail.com" method="post">
@@ -100,8 +101,11 @@
 				<input type="submit" name="Wyślij">
 			</form>
 		</div>
-		
+		<div class="copy">
+		<p>&copy; copyright Konrad Kowalczyk</p>
+	</div>	
 	</section>
+	
 
 </body>
 
