--- a/index.html
+++ b/index.html
@@ -4,36 +4,62 @@
 <head>
 	<meta charset="UTF-8">
 	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href="css/bxslider.css" rel="stylesheet" />
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="stylesheet" href="css/responsive.css" type="text/css">
+
+	
 	<title>Front-end Developar - Konrad Kowalczyk</title>
 </head>
 
 <body>
-	<nav>
-		<label class="toggle" for="drop">MENU</label>
-		<input id="drop" type="checkbox">
-		<ul id="main-nav">
-			<li><a href="#about">O mnie</a></li>
-			<li><a href="#skills">umiejętności</a></li>
-			<li><a href="#portfolio">portfolio</a></li>
-			<li><a href="#footer">kontakt</a></li>
-		</ul>
-	</nav>
+<!--nawigation bootstrap-->
+
+
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            
+          </div>
+          <div id="navbar" class="navbar-collapse collapse navbar-right">
+            <ul class="nav navbar-nav">
+              <li><a class="active navbar-right" href="#about">O mnie</a></li>
+              <li><a href="#skills">Umiejętności</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#footer">Kontakt</a></li>
+            </ul>
+           
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
+<!--nawigation bootstrap-->
+
 	<header id="main-header">
 		<div class="main-header-content">
 			<h1>Konrad <span class="green">Kowalczyk</span></h1>
 			<h2>Front-end Developer</h2>
 		</div>
 	</header>
-	<section id="about">
-		<h2>O <span class="green">mnie</span></h2>
-		<figure class="foto">
+	<section id="about" class="container-fluid">
+		<div class="row">
+		<h2 class="col-xs-12">O <span class="green">mnie</span></h2>
+		</div>
+		
+		<div class="row">
+		<figure class="foto col-md-4 col-xs-12">
 			<a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="blank"><img src="images/my-foto.gif" alt="moje foto"></a>
 		</figure>
-		<article>
+		<article class="foto col-md-8 col-xs-12">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quos dolorum pariatur aliquid iusto possimus minima eos explicabo impedit ullam nemo commodi deleniti obcaecati sapiente, consequatur voluptatum itaque nesciunt nulla amet quod voluptatem, accusantium veniam eius debitis! Praesentium labore, laudantium odio earum tenetur, nesciunt enim autem rerum aut cupiditate pariatur, temporibus odit, nostrum iure natus quis! Rerum ipsa reiciendis voluptatem cumque at nulla ex libero non exercitationem, eaque distinctio alias ipsum tempore! Aut, obcaecati mollitia tenetur accusantium harum, reprehenderit natus veniam quo molestiae nam laudantium, excepturi quas? Pariatur qui dolorum deserunt, nam corporis nemo voluptates impedit, enim fugit consequatur mollitia quos a placeat sapiente ea dolore soluta alias distinctio cupiditate quaerat repudiandae labore eligendi consectetur? Voluptatibus reiciendis facilis ea delectus modi officiis nesciunt incidunt repellat repudiandae quam ut tempore harum quisquam eaque, similique veniam in, blanditiis. Necessitatibus excepturi aut iste incidunt, asperiores corporis aspernatur nulla eaque labore vel? Iste, dolorum?</p>
-		</article>		
+		</article>
+		</div>		
 	</section>
 	<section id="skills">
 		<h2>
@@ -60,26 +86,31 @@
 			</figure>
 		</div>
 	</section>
-	<section id="portfolio">
-		<h2>Moje <span class="green">portfolio</span></h2>
-		<div id="gallery">
-			<div class="item-1">
+	<section id="portfolio" class="container-fluid">
+		<div class="row">
+		<h2 class="col-md-12">Moje <span class="green">portfolio</span></h2>
+		</div>
+		<div id="gallery" class="row">
+			<div class="item-1  col-md-4 col-xs-6">
+				<a href="index-form.html">
 				<div id="item-content-1">
 					<h1>Formularz zgłoszeniowy</h1>
 					<p>projekt formularza przesyłającego dane klienta</p>
 					<i><img src="images/icons/link-symbol.png" alt="linked"></i>
+					</a>
 				</div>
 			</div>
-			<div class="item-2">
+			<div class="item-2 col-md-4 col-xs-6">
 				<div class="item-content"></div>
 			</div>
-			<div class="item-3">
+			<div class="item-3 col-md-4 col-xs-12">
 				<div class="item-content"></div>
 			</div>
 		</div>
 	</section>
-	<section id="footer">
-		<div id="contact">
+	<section id="footer" class="container-fluid">
+		<div class="row">
+		<div id="contact" class="col-md-6 col-xs-12">
 			<h2>Konrad <span class="green">Kowalczyk</span></h2>
 			<address> Aleja Komisji Edukacji Narodowej 36A/29<br />02-797 Warszawa</address>
 			<p>+48/512-442-052</p><br />
@@ -91,7 +122,7 @@
 					<i><a href="#"><img src="images/icons/twitter.png" alt="twitter"></a></i>		
 			</div>
 		</div>
-		<div id="form">
+		<div id="form" class="col-md-6 col-xs-12">
 			<form action="https://formspree.io/konradkowalczyk89@gmail.com" method="post">
 				<input type="text" name="name-surname" placeholder="Imię i Nazwisko"><br />
 				<input type="email" name="email" placeholder="example@example.com"><br />
@@ -101,10 +132,14 @@
 		</div>
 		<div class="copy">
 		<p>&copy; copyright Konrad Kowalczyk</p>
+	</div>
 	</div>	
 	</section>
-	<script type="text/javascript" src="smoothscroll.min.js"></script>
-
+	<script type="text/javascript" src="javascript/smoothscroll.min.js"></script>
+	<script type="text/javascript" src="javascript/jquery-3.2.0.min.js"></script>
+  <script type="text/javascript" src="javascript/bootstrap.min.js"></script>
+	
+	
 </body>
 
 </html>
