english + js + navbar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
-              <li><a class="active navbar-right" href="#about">O mnie</a></li>
-              <li><a href="#skills">Umiejętności</a></li>
+              <li><a class="active navbar-right" href="#about">About me</a></li>
+              <li><a href="#skills">Skills</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#footer">Kontakt</a></li>
+              <li><a href="#footer">Contact</a></li>
             </ul>
            
           </div><!--/.nav-collapse -->
@@ -49,21 +49,21 @@
 	</header>
 	<section id="about" class="container-fluid">
 		<div class="row">
-		<h2 class="col-xs-12">O <span class="green">mnie</span></h2>
+		<h2 class="col-xs-12">About <span class="green">me</span></h2>
 		</div>
 		
 		<div class="row">
 		<figure class="foto col-md-4 col-xs-12">
-			<a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="blank"><img src="images/my-foto.gif" alt="moje foto"></a>
+			<a href="https://www.linkedin.com/in/konrad-kowalczyk/" target="blank"><img src="images/formal-foto.jpg" alt="moje foto"></a>
 		</figure>
 		<article class="foto col-md-8 col-xs-12">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quos dolorum pariatur aliquid iusto possimus minima eos explicabo impedit ullam nemo commodi deleniti obcaecati sapiente, consequatur voluptatum itaque nesciunt nulla amet quod voluptatem, accusantium veniam eius debitis! Praesentium labore, laudantium odio earum tenetur, nesciunt enim autem rerum aut cupiditate pariatur, temporibus odit, nostrum iure natus quis! Rerum ipsa reiciendis voluptatem cumque at nulla ex libero non exercitationem, eaque distinctio alias ipsum tempore! Aut, obcaecati mollitia tenetur accusantium harum, reprehenderit natus veniam quo molestiae nam laudantium, excepturi quas? Pariatur qui dolorum deserunt, nam corporis nemo voluptates impedit, enim fugit consequatur mollitia quos a placeat sapiente ea dolore soluta alias distinctio cupiditate quaerat repudiandae labore eligendi consectetur? Voluptatibus reiciendis facilis ea delectus modi officiis nesciunt incidunt repellat repudiandae quam ut tempore harum quisquam eaque, similique veniam in, blanditiis. Necessitatibus excepturi aut iste incidunt, asperiores corporis aspernatur nulla eaque labore vel? Iste, dolorum?</p>
+			<p>I am a young energetic person who is looking for new challenges. I am passionate about IT and new technologies. For over 9 years I am responsible for sales and technical projects so my attitude towards client and projects is very professional. I am completing certificated ''Front-end developer'' course in one of best-known programming school in Poland. As a developer, I would like to take a part in creating web pages and applications. At the moment I feel comfortable with technologies like html5, css3 javascript jquery, and bootstrap. I have much more technologies on my list so you can be confident that my value as an employee would increase in time. I am available for around 15-20 hours a week.</p>
 		</article>
 		</div>		
 	</section>
 	<section id="skills">
 		<h2>
-			Moje <span class="green">umiejętności</span>
+			My <span class="green">skills</span>
 		</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptates porro nostrum ut sed eius!<br />Placeat reiciendis ut voluptas tenetur ipsa dolorem, libero, facilis doloribus soluta voluptatum!<br />Ducimus quia suscipit illo sint officiis incidunt blanditiis, nihil assumenda modi debitis esse totam perspiciatis, libero exercitationem aliquid!<br />Ipsam accusantium, dolorem voluptatibus eius?</p>
 		
@@ -78,7 +78,7 @@
 			</figure>
 			<figure>
 				<img src="images/icons/js.png" alt="js">
-				<figcaption>JavaScript</figcaption>
+				<figcaption>JScript</figcaption>
 			</figure>
 			<figure>
 				<img src="images/icons/jquery-sketch-symbol.png" alt="jquery">
@@ -88,23 +88,36 @@
 	</section>
 	<section id="portfolio" class="container-fluid">
 		<div class="row">
-		<h2 class="col-md-12">Moje <span class="green">portfolio</span></h2>
+		<h2 class="col-md-12">My <span class="green">portfolio</span></h2>
 		</div>
 		<div id="gallery" class="row">
 			<div class="item-1  col-md-4 col-xs-6">
 				<a href="index-form.html">
 				<div id="item-content-1">
-					<h1>Formularz zgłoszeniowy</h1>
-					<p>projekt formularza przesyłającego dane klienta</p>
+					<h1>Registration form</h1>
+					<p>registration form that send personal details</p>
 					<i><img src="images/icons/link-symbol.png" alt="linked"></i>
-					</a>
+					
 				</div>
+				</a>
 			</div>
 			<div class="item-2 col-md-4 col-xs-6">
-				<div class="item-content"></div>
+				<a href="#" id="kalk-link">
+					<div id="item-content-2">
+						<h1>calculator</h1>
+						<p>project calculating basic math operations</p>
+						<i><img src="images/icons/link-symbol.png" alt="linked"></i>
+					</div>
+				</a>
 			</div>
 			<div class="item-3 col-md-4 col-xs-12">
-				<div class="item-content"></div>
+				<a href="images/K.Kowalczyk.pdf" download="K.Kowalczyk.pdf">
+				<div id="item-content-3">
+					<h1>CV</h1>
+						<p>to learn more please download file</p>
+						<i><img src="images/icons/link-symbol.png" alt="linked"></i>
+				</div>
+				</a>
 			</div>
 		</div>
 	</section>
@@ -112,7 +125,7 @@
 		<div class="row">
 		<div id="contact" class="col-md-6 col-xs-12">
 			<h2>Konrad <span class="green">Kowalczyk</span></h2>
-			<address> Aleja Komisji Edukacji Narodowej 36A/29<br />02-797 Warszawa</address>
+			<address> Aleja Komisji Edukacji Narodowej 36A/29<br />02-797 Warsaw</address>
 			<p>+48/512-442-052</p><br />
 			<a href="mailto:konradkowalczyk89@gmail.com?Subject=Cooperation" target="_top">konradkowalczyk@gmail.com</a>
 			<div id="media">			
@@ -124,9 +137,9 @@
 		</div>
 		<div id="form" class="col-md-6 col-xs-12">
 			<form action="https://formspree.io/konradkowalczyk89@gmail.com" method="post">
-				<input type="text" name="name-surname" placeholder="Imię i Nazwisko"><br />
+				<input type="text" name="name-surname" placeholder="Name and Surname"><br />
 				<input type="email" name="email" placeholder="example@example.com"><br />
-				<textarea name="textarea" id="wiadomosc" cols="60" rows="10" placeholder="Twoja wiadomość"></textarea><br />
+				<textarea name="textarea" id="wiadomosc" cols="60" rows="10" placeholder="Your message"></textarea><br />
 				<input type="submit" name="Wyślij">
 			</form>
 		</div>
@@ -135,10 +148,12 @@
 	</div>
 	</div>	
 	</section>
+	
+	<script src="javascript/calc-open.js"></script>
 	<script type="text/javascript" src="javascript/smoothscroll.min.js"></script>
 	<script type="text/javascript" src="javascript/jquery-3.2.0.min.js"></script>
   <script type="text/javascript" src="javascript/bootstrap.min.js"></script>
-	
+	<script src="javascript/nav-scroll.js"></script>
 	
 </body>
 
