--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<h2>
 			My <span class="green">skills</span>
 		</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptates porro nostrum ut sed eius!<br />Placeat reiciendis ut voluptas tenetur ipsa dolorem, libero, facilis doloribus soluta voluptatum!<br />Ducimus quia suscipit illo sint officiis incidunt blanditiis, nihil assumenda modi debitis esse totam perspiciatis, libero exercitationem aliquid!<br />Ipsam accusantium, dolorem voluptatibus eius?</p>
+		<p>I constantly work on enhancing my programming skills.<br />I plan to start back-end course in the beginning of next year.Prior to that, I want to master my current skills.<br />For now, I can freely use html5, css3, javascript, jquery, bootstrap, sass, gulp, git.</p>
 		
 		<div id="icons">
 			<figure>
