--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<input type="text" name="name-surname" placeholder="Name and Surname"><br />
 				<input type="email" name="email" placeholder="example@example.com"><br />
 				<textarea name="textarea" id="wiadomosc" cols="60" rows="10" placeholder="Your message"></textarea><br />
-				<input type="submit" name="Wyślij">
+				<input type="submit" name="Wyślij" value="Send">
 			</form>
 		</div>
 		<div class="copy">
